Palazzo Publicidade e Propaganda

--- a/index_5_imagens.html
+++ b/index_5_imagens.html
@@ -150,11 +150,10 @@ gtag('config', 'UA-140449650-1');
 			<div id="carousel">
 			
 			<img src="img/home/ABERTURA_01.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
-			<img src="img/home 2020/Palazzo 10 anos_01.jpg" width="800" height="460" alt="Palazzo Publicidade e Propaganda" /> 
 			<img src="img/home/ABERTURA_02.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
 			<img src="img/home/ABERTURA_03.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
 			<img src="img/home/01f_palazzo.jpg" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
-			
+			<img src="img/home/01f_palazzo.jpg" width="800" height="460" alt="Palazzo Publicidade e Propaganda" /> 
                   
             </div>
 			</div>
