--- a/portifolio_antes_das_novas_Imagens_0906.html
+++ b/portifolio_antes_das_novas_Imagens_0906.html
@@ -1,19 +1,18 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="title" content="Palazzo Publicidade e Propaganda" />
-    <meta name="description" content="Palazzo Publicidade e Propaganda - Portifolio">
-    <meta name="keywords" content="Palazzo, Publicidade, Propaganda, Portifolio ">
-    <meta name="author" content="Palazzo Publicidade e Propaganda">
+    <meta name="description" content="Palazzo Publicidade e Propaganda - Portifolio" />
+    <meta name="keywords" content="Palazzo, Publicidade, Propaganda, Portifolio " />
+    <meta name="author" content="Palazzo Publicidade e Propaganda" />
     <meta name="geography" content="Campinas SÃ£o Paulo" />
     <meta name="robots" content="ALL" />
     <meta name="language" content="pt-br" />
     <meta name="location" content="SÃ£o Paulo, Brazil" />
     <title>Porttifolio - Palazzo Publicidade e Propaganda</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-
+    <link href="style.css" rel="stylesheet" type="text/css" />
 
     <!-- SHADOWNBOX -->
 
@@ -22,8 +21,8 @@
     <script type="text/javascript" src="shadowbox/shadowbox-3.0.3/shadowbox.js"></script>
     <script type="text/javascript">
         Shadowbox.init({
-            language: 'pt',
-            player: ['img', 'html', 'swf']
+            language: "pt",
+            player: ["img", "html", "swf"],
         });
     </script>
 
@@ -43,7 +42,7 @@
                 autoScrollStep: 1,
                 autoScrollInterval: 15,
                 startAtElementId: "startAtMe",
-                visibleHotSpots: "always"
+                visibleHotSpots: "always",
             });
         });
     </script>
@@ -67,7 +66,6 @@
             float: left;
             margin: 0;
             padding: 0;
-
         }
     </style>
 
@@ -82,13 +80,12 @@
         function gtag() {
             dataLayer.push(arguments);
         }
-        gtag('js', new Date());
+        gtag("js", new Date());
 
-        gtag('config', 'UA-140449650-1');
+        gtag("config", "UA-140449650-1");
     </script>
 
     <!-- GOOGLE ANALÃTICO -->
-
 </head>
 
 <body>
@@ -96,7 +93,8 @@
         <!-- DIV CONTAINER HEADER -->
         <header id="header">
             <!-- HEADER -->
-            <header id="header-logo"></header><!-- DIV HEADER LOGO -->
+            <header id="header-logo"></header>
+            <!-- DIV HEADER LOGO -->
             <nav id="menu">
                 <!-- MENU -->
                 <ul>
@@ -106,9 +104,12 @@
                     <li><a href="servicos.html">serviços</a></li>
                     <li><a href="contato.html">contato</a></li>
                 </ul>
-            </nav><!-- MENU -->
-        </header><!-- FIM DIV HEADER -->
-    </header><!-- FIM DIV CONTAINER HEADER -->
+            </nav>
+            <!-- MENU -->
+        </header>
+        <!-- FIM DIV HEADER -->
+    </header>
+    <!-- FIM DIV CONTAINER HEADER -->
 
     <div id="corpo-container">
         <!-- CORPO CONTAINER -->
@@ -119,16 +120,10 @@
                     <div class="scrollingHotSpotLeft"></div>
                     <div class="scrollingHotSpotRight"></div>
                     <div class="scrollWrapper">
-
                         <div class="scrollableArea">
-
                             <a href="port_novo/alta/134c_dronne_seguros_site.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_134c_Dronne_seguros_site.png"
                                     alt="Palazzo Publicidade e Propaganda" id="startAtMe" /></a>
-
-                            <a href="port_novo/alta/134b_dronne_seguros_site.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_134b_Dronne_seguros_site.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
 
                             <a href="port_novo/alta/121_SAGFarma_folder.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_121_SAGFarma_folder.png"
@@ -162,10 +157,6 @@
                                 <img src="port_novo/min/arte_122_Andre_caminhoesr.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
-                            <a href="port_novo/alta/123_Andre_caminhoes.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_123_Andre_caminhoes.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
                             <a href="port_novo/alta/104_CSPROL_folder.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_104_CSPROL_folder.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
@@ -174,16 +165,8 @@
                                 <img src="port_novo/min/arte_105_CSPROL_folder.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
-                            <a href="port_novo/alta/117_SamuelPessoa_anuncio.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_117_SamuelPessoa_anuncio.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
                             <a href="port_novo/alta/117b_SamuelPessoa_anuncio.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_117b_SamuelPessoa_anuncio.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/106_Permatex_anuncio.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_106_Permatex_anuncio.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
                             <a href="port_novo/alta/108_FAG_emailmkt.png" rel="shadowbox">
@@ -194,92 +177,52 @@
                                 <img src="port_novo/min/arte_109_FAG_caderno.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
-                            <a href="port_novo/alta/111_Garvan_materiais.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_111_Garvan_materiais.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/112_GVA_banner.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_112_GVA_banner.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/113_Iescamp_emailmkt.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_113_Iescamp_emailmkt.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/116_RDS_aprovada.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_116_RDS_aprovada.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/118_MasterLabel_emailmkt.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_118_MasterLabel_emailmkt.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/119_Okuma_lona.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_119_Okuma_lona.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
+                            <a href="port_novo/alta/134_Antena_1_News_Letter.png" rel="shadowbox">
+                                <img src="port_novo/min/arte_134.png" alt="Palazzo Publicidade e Propaganda" /></a>
 
                             <a href="port_novo/alta/120_Pegasus_hotsite.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_120_Pegasus_hotsite.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/124_Trilha_emailmkt.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_124_Trilha_emailmkt.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/127_Gelato_adesivo.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_127_Gelato_adesivo.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/128_Ventura_anuncio.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_128_Ventura_anuncio.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
                             <a href="port_novo/alta/129_Ventura_anuncio.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_129_Ventura_anuncio.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
-                            <a href="port_novo/alta/130_Ventura_anuncio.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_130_Ventura_anuncio.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
-
-
-
-                            <a href="port_novo/alta/132_Ventura_anuncio.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_132_Ventura_anuncio.png"
+                            <a href="port_novo/alta/127_Gelato_adesivo.png" rel="shadowbox">
+                                <img src="port_novo/min/arte_127_Gelato_adesivo.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
                             <a href="port_novo/alta/133_A7TI_emailmkt.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_133_A7TI_emailmkt.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
-                            <a href="port_novo/alta/134_Antena_1_News_Letter.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_134.png" alt="Palazzo Publicidade e Propaganda" /></a>
-
-                            <a href="port_novo/alta/134d_dronne_seguros_site.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_134d_Dronne_seguros_site.png"
+                            <a href="port_novo/alta/132_Ventura_anuncio.png" rel="shadowbox">
+                                <img src="port_novo/min/arte_132_Ventura_anuncio.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
                             <a href="port_novo/alta/135_ANACLETO_COQUETEIS_Anuncio_Revista.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_135.png" alt="Palazzo Publicidade e Propaganda" /></a>
-
                         </div>
-
                     </div>
                 </div>
             </div>
-
-        </div><!-- FIM DIV BANNER -->
-    </div><!-- FIM DIV CORPO CONTAINER -->
+        </div>
+        <!-- FIM DIV BANNER -->
+    </div>
+    <!-- FIM DIV CORPO CONTAINER -->
 
     <footer id="footer-container">
         <!-- DIV FOOTER -->
         <footer id="footer">
-
             <footer id="faixa">
-                <h2>TODOS OS DIREITOS RESERVADOS • PALAZZO PUBLICIDADE E PROPAGANDA • CAMPINAS • 2019</h2>
+                <h2>
+                    TODOS OS DIREITOS RESERVADOS • PALAZZO PUBLICIDADE E PROPAGANDA •
+                    CAMPINAS • 2019
+                </h2>
             </footer>
         </footer>
-    </footer><!-- FIM DIV FOOTER -->
+    </footer>
+    <!-- FIM DIV FOOTER -->
 </body>
 
 </html>
