Código Novo Google Analítico

--- a/pagina.html
+++ b/pagina.html
@@ -6,25 +6,25 @@
 <meta name="description" content="Palazzo Publicidade e Propaganda - Sobre">
 <meta name="keywords" content="Palazzo, Publicidade, Propaganda, Sobre ">
 <meta name="author" content="Palazzo Publicidade e Propaganda">
-<meta name="geography" content="Campinas São Paulo" />
+<meta name="geography" content="Campinas Sï¿½o Paulo" />
 <meta name="robots" content="ALL" />
 <meta name="language" content="pt-br" />
-<meta name="location" content="São Paulo, Brazil" />
+<meta name="location" content="Sï¿½o Paulo, Brazil" />
 <title>Palazzo e Propaganda</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 
-<!-- GOOGLE ANALÍTICO -->
+<!-- GOOGLE ANALÃTICO -->
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
 <script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-gtag('config', 'UA-140449650-1');
+  gtag('config', 'UA-140449650-1');
 </script>
 
-<!-- GOOGLE ANALÍTICO -->
+<!-- GOOGLE ANALÃTICO -->
 
 </head>
 
@@ -71,7 +71,7 @@ gtag('config', 'UA-140449650-1');
         <footer id="footer">
         
         <footer id="faixa">
-        <h2>TODOS OS DIREITOS RESERVADOS • PALAZZO PUBLICIDADE E PROPAGANDA • CAMPINAS • 2019</h2>
+        <h2>TODOS OS DIREITOS RESERVADOS ï¿½ PALAZZO PUBLICIDADE E PROPAGANDA ï¿½ CAMPINAS ï¿½ 2019</h2>
         </footer>
         </footer>
         </footer><!-- FIM DIV FOOTER -->
