--- a/index_bkp.html
+++ b/index_bkp.html
@@ -15,25 +15,18 @@
 	<title>Palazzo Publicidade e Propaganda</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
 
-	<!-- GOOGLE ANALÍTICO -->
+<!-- GOOGLE ANALÍTICO -->
 
-	<!-- GOOGLE ANALÍTICO -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
+  gtag('config', 'UA-140449650-1');
+</script>
 
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-140449650-1');
-	</script>
-
-	<!-- GOOGLE ANALÍTICO -->
-
-	<!-- GOOGLE ANALÍTICO -->
+<!-- GOOGLE ANALÍTICO -->
 
 	<!-- SLIDE -->
 
