--- a/pagina/embalagens/index.html
+++ b/pagina/embalagens/index.html
@@ -15,23 +15,14 @@
 
 <!-- GOOGLE ANALÍTICO -->
 
-<!-- GOOGLE ANALÍTICO -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-42574058-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+  gtag('config', 'UA-140449650-1');
 </script>
-
-<!-- GOOGLE ANALÍTICO -->
 
 <!-- GOOGLE ANALÍTICO -->
 
