--- a/portifolio_antes_das_novas_Imagens_0906.html
+++ b/portifolio_antes_das_novas_Imagens_0906.html
@@ -14,6 +14,19 @@
     <title>Porttifolio - Palazzo Publicidade e Propaganda</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
+    <!-- GOOGLE ANALÍTICO -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-140449650-1');
+</script>
+
+<!-- GOOGLE ANALÍTICO -->
+
     <!-- SHADOWNBOX -->
 
     <link href="shadowbox/shadowbox-3.0.3/shadowbox.css" rel="stylesheet" type="text/css" />
