--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 <!-- GOOGLE ANALÍTICO -->
 
 <!-- GOOGLE ANALÍTICO -->
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -150,11 +148,10 @@
 			<div id="carousel">
 			
 			<img src="img/home/ABERTURA_01.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
-			<img src="img/home 2020/Palazzo 10 anos_01.jpg" width="800" height="460" alt="Palazzo Publicidade e Propaganda" /> 
 			<img src="img/home/ABERTURA_02.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
 			<img src="img/home/ABERTURA_03.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
 			<img src="img/home/01f_palazzo.jpg" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
-			
+			<ing src="img/home_2020/"
                   
             </div>
 			</div>
