--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 <!-- GOOGLE ANALÍTICO -->
 
 <!-- GOOGLE ANALÍTICO -->
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-140449650-1');
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-140449650-1');
 </script>
 
 <!-- GOOGLE ANALÍTICO -->
@@ -148,9 +150,11 @@
 			<div id="carousel">
 			
 			<img src="img/home/ABERTURA_01.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
+			<img src="img/home 2020/Palazzo 10 anos_01.jpg" width="800" height="460" alt="Palazzo Publicidade e Propaganda" /> 
 			<img src="img/home/ABERTURA_02.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
 			<img src="img/home/ABERTURA_03.png" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
 			<img src="img/home/01f_palazzo.jpg" width="800" height="460" alt="Palazzo Publicidade e Propaganda" />
+			
                   
             </div>
 			</div>
@@ -168,3 +172,4 @@
         </footer><!-- FIM DIV FOOTER -->
 </body>
 </html>
+  
