Index Slide Atualizadoe 4 Imagens para funcionar

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
 	<!-- GOOGLE ANALÍTICO -->
 
-	<!-- GOOGLE ANALÍTICO -->
-
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140449650-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -30,8 +28,6 @@
 
 		gtag('config', 'UA-140449650-1');
 	</script>
-
-	<!-- GOOGLE ANALÍTICO -->
 
 	<!-- GOOGLE ANALÍTICO -->
 
@@ -183,6 +179,9 @@
 							alt="Palazzo Publicidade e Propaganda" />
 						<img src="img/home_2020/palazzo_10anos.png" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
+						<img src="img/home_2020/site_emprea.png" width="800" height="460"
+							alt="Palazzo Publicidade e Propaganda" />
+
 						<img src="img/home_2020/site_emprea.png" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
 
