--- a/index.html
+++ b/index.html
@@ -177,11 +177,13 @@
 
 						<img src="img/home_2020/logo_empresa.png" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
-						<img src="img/home_2020/palazzo_10anos.png" width="800" height="460"
+						<img src="img/home_2020/PALAZZO 10 ANOS_02.png" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
 						<img src="img/home_2020/site_emprea.png" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
-						<img src="img/home_2020/site_emprea.png" width="800" height="460"
+						<img src="img/home_2020/ADESIVAÇÃO.jpg" width="800" height="460"
+							alt="Palazzo Publicidade e Propaganda" />
+						<img src="img/home_2020/OUTDOOR.jpg" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
 
 					</div>
