--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 							alt="Palazzo Publicidade e Propaganda" />
 						<img src="img/home_2020/PALAZZO 10 ANOS_02.png" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
-						<img src="img/home_2020/site_emprea.png" width="800" height="460"
+						<img src="img/home_2020/nova_site_emprea.jpg" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
 						<img src="img/home_2020/ADESIVAÇÃO.jpg" width="800" height="460"
 							alt="Palazzo Publicidade e Propaganda" />
