--- a/portifolio.html
+++ b/portifolio.html
@@ -291,24 +291,24 @@
 
                             
 
-                            <a href="port_novo/alta/129_Ventura_anuncio.png" rel="shadowbox">
+                            <!-- <a href="port_novo/alta/129_Ventura_anuncio.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_129_Ventura_anuncio.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
+                                    alt="Palazzo Publicidade e Propaganda" /></a> -->
 
-                            <a href="port_novo/alta/127_Gelato_adesivo.png" rel="shadowbox">
+                            <!-- <a href="port_novo/alta/127_Gelato_adesivo.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_127_Gelato_adesivo.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
+                                    alt="Palazzo Publicidade e Propaganda" /></a> -->
 
                             <a href="port_novo/alta/133_A7TI_emailmkt.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_133_A7TI_emailmkt.png"
                                     alt="Palazzo Publicidade e Propaganda" /></a>
 
-                            <a href="port_novo/alta/132_Ventura_anuncio.png" rel="shadowbox">
+                            <!-- <a href="port_novo/alta/132_Ventura_anuncio.png" rel="shadowbox">
                                 <img src="port_novo/min/arte_132_Ventura_anuncio.png"
-                                    alt="Palazzo Publicidade e Propaganda" /></a>
+                                    alt="Palazzo Publicidade e Propaganda" /></a> -->
 
-                            <a href="port_novo/alta/135_ANACLETO_COQUETEIS_Anuncio_Revista.png" rel="shadowbox">
-                                <img src="port_novo/min/arte_135.png" alt="Palazzo Publicidade e Propaganda" /></a>
+                            <!-- <a href="port_novo/alta/135_ANACLETO_COQUETEIS_Anuncio_Revista.png" rel="shadowbox">
+                                <img src="port_novo/min/arte_135.png" alt="Palazzo Publicidade e Propaganda" /></a> -->
                         </div>
                     </div>
                 </div>
